--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,8 @@ body{
 	padding-top: 20px;
 	padding-right: 5px;
 	font-size: 73px;
+   border-top-left-radius: 7px;
+   border-top-right-radius: 7px;
 }
 
 .calculator {
